[project]
name = "meho-backplane"
version = "0.1.0-dev"
description = "MEHO governance-layer backplane (HTTP server, observability, audit, federation)"
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.30",
    "pydantic[email]>=2.6",
    "structlog>=24.1",
    "prometheus-client>=0.20",
    "authlib>=1.3",
    "httpx>=0.27",
    "hvac>=2.4.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
    "cryptography>=42.0",
    "respx>=0.21",
    "pytest-cov>=5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/meho_backplane"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "A",    # flake8-builtins (no shadowing)
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]  # asserts allowed in tests

[tool.ruff.lint.flake8-bugbear]
# FastAPI's standard dependency-injection pattern relies on calling
# Depends() / Header() / Query() / Path() / Body() / File() / Form() /
# Security() in argument defaults. B008 would flag every one of those;
# whitelisting them here keeps the rule strict for genuine
# accidental-call defaults.
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Header",
    "fastapi.Query",
    "fastapi.Path",
    "fastapi.Body",
    "fastapi.Form",
    "fastapi.File",
    "fastapi.Security",
]

[tool.mypy]
strict = true
python_version = "3.12"
files = ["src"]

# authlib publishes no type stubs (the maintainer migrated typing
# attention to ``joserfc``). Whitelist its module tree rather than
# disabling missing-imports globally — strict mode stays in effect for
# every other dependency.
[[tool.mypy.overrides]]
module = ["authlib.*"]
ignore_missing_imports = true

# hvac (HashiCorp Vault Python client, ADR 0004) ships no ``py.typed``
# marker as of 2.4.0 — every public method returns ``Any``. Whitelisting
# its tree lets strict mode keep biting on the rest of the codebase
# while the Vault wrapper module localises the untyped surface to one
# place. If hvac later ships stubs, drop this override.
[[tool.mypy.overrides]]
module = ["hvac.*"]
ignore_missing_imports = true

# ``requests`` is hvac's transport dependency. We only catch its
# exception types in :mod:`meho_backplane.auth.vault` to map them
# through to backplane-side errors; we don't depend on its public API
# directly. ``types-requests`` would pull a separate stub package into
# the runtime image; whitelisting the module keeps the dev image lean
# without weakening typing for first-party code.
[[tool.mypy.overrides]]
module = ["requests.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# Note: ``authlib.deprecate`` calls ``warnings.simplefilter("always",
# AuthlibDeprecationWarning)`` at import time, so the
# ``AuthlibDeprecationWarning("authlib.jose module is deprecated...")``
# raised on first import shows in the pytest summary even when the
# import is wrapped in ``warnings.catch_warnings()``. The single
# warning is intentional — it's the only signal the test run carries
# of the v0.2 ``joserfc`` migration backlog item, and silencing it
# would risk obscuring future authlib deprecations.
